# MyGameProject

./: .gitignore  .luarc.json  CMakeLists.txt  Project.manifest.json  install.bat  main.cpp  readme.md
Assets/: 01f963ca-2da2-4f8b-91ad-3e863020b29f.meta.json  04d403fa-9a98-446f-8687-637eccc7952c.meta.json  079d66d6-70fd-41ce-8dc0-dbccbaca048e.meta.json  07e75522-41b0-4ec7-9f5b-69beee926358.meta.json  0b4c3b08-2b97-4345-ad76-63474d6fc69a.meta.json  0b7b16fd-182d-46e9-9cf9-999ff0de5607.meta.json  0c7552c7-a6b9-4c8e-88c2-e8997e24130d.meta.json  0edf16cd-a318-48f7-988d-65d718706bf8.meta.json  15943860-1128-4f18-9481-64d26d64d062.meta.json  16d173f4-ef10-4ef2-8e54-e4af299ad2fb.meta.json  16de0f35-9bce-4293-bb88-f8194726ba04.meta.json  1bccd3f7-2a27-445d-9855-1ea9d01c1836.meta.json  20842ba7-4edb-43bf-9c03-6f96e34a32a3.meta.json  21994f59-2e8f-4522-9077-b965b5eff7ae.meta.json  26438e24-aeb8-4f14-90b8-7faa69b5467c.meta.json  2ae3abba-9e95-45a6-b812-417985ba2565.meta.json  2c4aef00-5b70-4d1b-b544-00d924ed8c2b.meta.json  30e452e0-a827-4e64-b836-d3d653ce7fa5.meta.json  34084a9a-6717-404e-ba7d-1b25aa4a3529.meta.json  3661ebec-5cf7-4398-9b09-9394a8a388e2.meta.json  3865fdd2-dfc4-4cce-8075-deb4a07f390c.meta.json  39399dc8-da9f-4f10-890e-c003c861b711.meta.json  3b5fa608-3f47-4772-b6b3-20042ca4e037.meta.json  3d704b81-09a9-44e1-b000-14543c7e0b33.meta.json  3ee11a3e-c18e-45a6-8493-cd95d27ce0a7.meta.json  3ef6b6e3-eef4-4ee5-ae4b-e9e1e7e37d52.meta.json  418a27a4-f8de-4d80-8980-85a130d91ec3.meta.json  4865f2b1-36a6-4d9c-8c84-115ac2adf3fb.meta.json  4a423077-b6a7-4caf-a5e3-418e2fa3fb3a.meta.json  4a986a89-17fa-475b-8002-4f63df47394e.meta.json  4f0bc199-2564-4370-8de4-0ebf479f7023.meta.json  5bbc58a5-31c0-4eed-9d7e-8d5e84374ef9.meta.json  5e16080b-832d-408c-b792-e156604a19b5.meta.json  5e7c147d-41c5-4fd9-ac2f-da66c2f88edf.meta.json  6209c6c3-1ee2-4cb6-9497-35ab753ecced.meta.json  67640855-221b-483a-8475-ec8fdd4a1238.meta.json  6ad688e5-1710-4875-b466-ffd19f4991ac.meta.json  71fd5064-ec02-41b1-8bb3-543ae44a70a5.meta.json  757981fb-3d8c-4043-9e0d-fd30f70a2206.meta.json  786bb551-ab7a-4db7-8f62-0680683e81b0.meta.json  (+55 more)
CmakeScripts/: StripManifest.cmake
Levels/: 4a744cda-2be0-478f-878a-5b4aaf526889.meta.json  fd710a17-fe08-4ced-8e1d-8536cbce3503.meta.json  level1.lvl
src/headers/: WarriorAICharacter.hpp  WarriorAIController.hpp  WarriorPlayerController.hpp
src/sources/: WarriorAICharacter.cpp  WarriorAIController.cpp  WarriorPlayerController.cpp  WarriorStatemachine.cpp
